--- a/StarDrive.csproj
+++ b/StarDrive.csproj
@@ -2155,6 +2155,7 @@
     </Content>
     <Content Include="Content\ShipModules\Bridge.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Content\ShipModules\Broadside_Flak_3x2.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -2167,6 +2168,7 @@
     </Content>
     <Content Include="Content\ShipModules\CIC.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Content\ShipModules\Cockpit.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
