fix up terran hulls. This might be weird. Light carrier design which is available in vanilla designs but not unlockablle is unlocked with battleships.
--HG--
branch : develop

--- a/StarDrive.csproj
+++ b/StarDrive.csproj
@@ -1774,7 +1774,13 @@
     <Content Include="Content\Hulls\HaulerSmall.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Hulls\terran\Battleship.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Hulls\terran\Heavy Cruiser.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Hulls\terran\Light Carrier.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Hulls\terran\LightCarrier.xml">
