Global ai empire assault fixes. threading tweak.
--HG--
branch : develop

--- a/StarDrive.csproj
+++ b/StarDrive.csproj
@@ -1791,6 +1791,7 @@
     </Content>
     <Content Include="Content\Hulls\terran\Heavy Cruiser.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Content\Hulls\terran\Light Carrier.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
