1102 uploaded Should allow better AI ships in techlevel and STSA. fixes a couple of crashes in vanilla.
--HG--
branch : develop

--- a/StarDrive.csproj
+++ b/StarDrive.csproj
@@ -1719,6 +1719,12 @@
     <None Include="Content\Textures\Minimap\button_normal.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Content\Textures\Modules\PolaronTurret2x2.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Content\Textures\Modules\PolaronTurret3x3.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Content\Textures\NewUI\icon_order_explore.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
