add <gcServer enabled="true"/> to app.config.
--HG--
branch : feature/Memory Usage Overhall

--- a/app.config
+++ b/app.config
@@ -39,6 +39,7 @@
   </startup>
   <runtime>
     <legacyCorruptedStateExceptionsPolicy enabled="true" />
+    <gcServer enabled="true"/>
   </runtime>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
