remove ship purging from bad designs. if weapon cant fire because of energy then dont try to fire. remove try catch in hull model loader for memory compaction. add gcconcurrent to allow gcserver to run in concurrent mode.
--HG--
branch : develop

--- a/app.config
+++ b/app.config
@@ -40,6 +40,7 @@
   <runtime>
     <legacyCorruptedStateExceptionsPolicy enabled="true"/>
     <gcServer enabled="true"/>
+    <gcConcurent enabled="true"/>
   </runtime>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
