--- a/StarDrive.csproj
+++ b/StarDrive.csproj
@@ -356,6 +356,7 @@
       <AutoGen>false</AutoGen>
       <DesignTimeSharedInput>false</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Ship_Game\SafeQueue.cs" />
     <Compile Include="Ship_Game\ShipNames.cs" />
     <Compile Include="Ship_Game\ShipRole.cs" />
     <Compile Include="Ship_Game\SubClasses.cs" />
